--- a/canvas_setting/style.css
+++ b/canvas_setting/style.css
@@ -12,7 +12,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  position: fixed; 
+  position: fixed; /* 오류 난다면 position: relative;로 수정 */
   background-color: #3de1f5;
   margin: 0;
 }
